내강의실 > 온라인강좌 페이지 작업 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -520,6 +520,9 @@ strong {
 .pl-zero {
   padding-left: 0px !important;
 }
+.pl10 {
+  padding-left: 10px !important;
+}
 .pl20 {
   padding-left: 20px !important;
 }
