내강의실 > 온라인강좌, 학원강좌, 특강&이벤트 신청현황, 결제관리 페이지 작업 업로드(페이지 내 팝업 진행중)

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -403,7 +403,9 @@ strong {
 .h66 {
   height: 66px !important;
 }
-
+.mt0 {
+  margin-top: 0px !important;
+}
 .mt10 {
   margin-top: 10px !important;
 }
@@ -545,6 +547,9 @@ strong {
   padding-left: 135px !important;
 }
 
+.pb60 {
+  padding-bottom: 60px !important;
+}
 .pb110 {
   padding-bottom: 110px !important;
 }
