고객센터 index 페이지 수정사항 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4957,6 +4957,12 @@ ul li.profList .willbes-Layer-ProfileBox {
 .tabWrap.tab_Question .subBox {
     top: 94px;
 }
+.cscenterList {
+    cursor: pointer;
+}
+.cscenterTxt {
+    display: none;
+}
 
 /* subContainer : Cs : tabcsDepth2 공통 */
 .tabWrap.tabcsDepth2 .subBox {
