--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -525,6 +525,9 @@ strong {
 .pl10 {
   padding-left: 10px !important;
 }
+.pl15 {
+  padding-left: 15px !important;
+}
 .pl20 {
   padding-left: 20px !important;
 }
