--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1774,6 +1774,9 @@ table.auTable tr td {
     border-bottom: 1px solid #888;
     margin-top: 10px;
 }
+.willbes-Lec-Subject .MoreBtn span {
+    vertical-align: baseline;
+}
 
 /* subContainer : Content : Lec-Profdata */
 .willbes-Lec-Profdata {
@@ -2396,6 +2399,17 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     border-bottom: 2px solid #000;
 }
 .willbes-Layer-Box.d2 .classInfo {
+    padding-top: 20px;
+}
+
+.willbes-Layer-Box.d3 {
+    height: 260px;
+    margin-top: -130px;
+}
+.willbes-Layer-Box.d3 .Layer-Tit {
+    margin-bottom: 0;
+}
+.willbes-Layer-Box.d3 .classInfo {
     padding-top: 20px;
 }
 
@@ -5785,6 +5799,137 @@ table.acadTable tr td {
     font-size: 12px;
     text-align: left;
 }
+
+
+
+
+
+/*********************************************     ACADEMY     *********************************************/
+
+/* subContainer : Content : Lec-Table */
+table.acadlecTable .w-schedule {
+    line-height: 30px;
+}
+table.acadlecTable tr td .priceWrap {
+    width: 165px;
+}
+table.acadlecTable tr td .priceWrap .price {
+    width: 90px;
+    text-align: right;
+}
+table.acadlecTable tr td .priceWrap .chkBox {
+    float: left;
+    margin: 1px;
+}
+table.acadlecInfoTable {
+    height: 240px;
+    overflow-x: auto;
+}
+table.acadlecInfoTable tr td {
+    width: 940px;
+    height: 240px;
+    padding: 25px 40px;
+}
+.willbes-Lec-Table.active {
+    padding-bottom: 130px;
+}
+.willbes-Lec-Table.active .willbes-Lec-buyBtn {
+    bottom: 60px;
+}
+table.lecInfoTable .w-Infotit {
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 10px;
+}
+table.lecInfoTable .w-InfoSubtit {
+    font-size: 12px;
+    color: #3e3e3e;
+}
+table.acadlecInfoTable .w-txt {
+    font-size: 12px;
+    color: #3a3a3a;
+}
+table.acadlecInfoTable .w-txt strong {
+    display: inline-block;
+    font-size: 13px;
+    color: #000;
+    padding: 10px 0;
+}
+table.acadlecInfoPackageTable {
+    background: #f5f5f5;
+    padding: 30px 40px;
+    border-bottom: 1px solid #c9c9c9;
+}
+table.acadlecInfoPackageTable tr td {
+    text-align: center;
+    padding: 0;
+    border-right: 1px solid #c9c9c9;
+    padding: 20px 0;
+    border-bottom: 1px solid #c9c9c9;
+}
+table.acadlecInfoPackageTable tr td:first-child {
+    border-left: 1px solid #c9c9c9;
+}
+table.acadlecInfoPackageTable tr td.w-list input {
+    float: left;
+    margin: 8px;
+}
+table.acadlecInfoPackageTable tr td span {
+    vertical-align: baseline;
+}
+table.acadlecInfoPackageTable tr.Top td {
+    background: #fff;
+    height: 40px;
+    padding: 0;
+    border-top: 1px solid #c9c9c9;
+}
+
+
+
+.w-notice .acadInfo {
+    float: right;
+    font-size: 10px;
+    font-weight: 300;
+    color: #fff;
+    text-align: center;
+    line-height: 15px;
+    padding: 0 7px;
+    margin-right: 70px;
+}
+.w-notice .acadInfo.n1 {
+    background: #fe0000;
+}
+.w-notice .acadInfo.n2 {
+    background: #46a1dc;
+}
+.w-notice .acadInfo.n3 {
+    background: #333;
+}
+.w-info dt .acadBox {
+    display: inline-block;
+    font-size: 11px;
+    font-weight: 600;
+    color: #000;
+    text-align: center;
+    line-height: 20px;
+    border: 1px solid #000;
+    padding: 0 4px;
+}
+.w-info dt .acadBox.n1 {
+    color: #9c3eb4;
+    border-color: #9c3eb4;
+}
+.w-info dt .acadBox.n2 {
+    color: #1345b6;
+    border-color: #1345b6;
+}
+.w-info dt .acadBox.n3 {
+    color: #0a8cc2;
+    border-color: #0a8cc2;
+}
+
+
+
+
 
 
 
